jee-api-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jee-api
  labels:
    app: jee-api
    group: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jee-api
  template:
    metadata:
      labels:
        app: jee-api
        group: backend
    spec:
      containers:
        - name: jee-api
          image: jee-api
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
          resources: {}
status: {}
