jee-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jee-api
  labels:
    group: backend
spec:
  type: ClusterIP
  selector:
    app: jee-api
  ports:
    - port: 3001
      targetPort: 3001
